--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Roboto+Slab&display=swap" rel="stylesheet">
-  <link rel="icon" href="https://fav.farm/🔑" />
-  <title>Chaabi</title>
+  <link rel="icon" href="https://fav.farm/💹" />
+  <title>Insight +</title>
 </head>
 
 <body>
